--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,10 @@ Package: RCEPAL
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
+Imports:
+    dplyr (>= 0.3.0.1)
+    rvest
+    tidyr
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
